appId: com.webkul.bagistoApp.iOS
---
- launchApp
- assertVisible:
    text: "Popular Products"
- tapOn:
    text: "Categories"
- assertVisible:
    text: "Electronics"
- tapOn:
    type: "RCTImageView"
    index: 0
- assertVisible:
    text: "Add to Cart"
- tapOn:
    text: "Add to Cart"
- assertVisible:
    text: "Item added"
- tapOn:
    text: "Cart"
- assertVisible:
    text: "Cart"
